--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,8 @@ header.header {height:639px; width:100%; position:relative; z-index:2; backgroun
 
 h1 {padding:31px 0 0 2px; position:relative;}
 .logo {display:block; width:233px; height:70px; text-indent:-5000px; background:url(../images/logo.png) 0 0 no-repeat;}
+.logo1 {display:block; width:500px; height:200px; text-indent:-5000px; background:url(../images/spectrum_logo.png) 0 0 no-repeat;}
+
 
 .phone {float:right; padding:52px 4px 0 0; font-size:19px; line-height:1.2em; color:#fff; font-family:Arial, Helvetica, sans-serif; text-align:right;}
 .text-1 {font-size:12px; line-height:1.2em; color:#fff; font-family:Arial, Helvetica, sans-serif; padding:6px 0px 0 0; display:inline-block;}
